@@ -16,6 +16,7 @@ Enhancements::
 Bug Fixes::
 
 * allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
+* apply text-tranform from custom role on phrase after attributes have been resolved (#2263)
 * make URL check more strict so image target containing a colon is not mistaken as a URL
 
 == 2.1.3 (2022-06-23) - @mojavelinux
